# Tetris_online_backend

./: .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  alembic.ini  docker-compose.yml  project.toml  pyproject.toml  tasks.py
.github/workflows/: deploy.yaml  publish.yaml
config/: .env  .env.local  __init__.py  celery.py  database.py  email.py  s3.py  settings.py
docker/: docker-init  docker-proxy
docs/: INSTALL.md
invocations/: project.py
k8s/: backend-deployment.yaml  backend-job.yaml  backend-service.yaml  namespace.yaml
migrations/: env.py
migrations/versions/: 0001_add_user_models.py  0002_add_is_active_for_user_model.py
nginx.d/: nginx.conf
src/: main.py
src/api/: hello.py  user_routes.py
src/api/friend/api/: __init__.py  crud.py
src/api/friend/services/: friend.py
src/api/user/: api.py  schemas.py
src/api/user/api/: __init__.py  auth.py  crud.py  utils.py
src/api/user/services/: __init__.py  auth.py  crud.py  get_profile.py
src/auth/api/schemes/: __init__.py  login.py  sign_up.py
src/auth/api/views/: auth.py
src/auth/services/: __init__.py  auth.py  get_user_profile.py
src/config/: .env  __init__.py  auth.py  celery.py  database.py  models.py  s3.py  schemas.py  service.py  settings.py  user_service.py
src/core/: db.py  factories.py  models.py
src/core/api/: schemes.py
src/friend/api/: crud.py  schemas.py
src/friend/services/: __init__.py  friend.py
src/game_session/api/schemas/: __init__.py  tetris_game_session_schemas.py
src/game_session/api/views/: game_session.py
src/game_session/db_services/: game_session.py
src/game_session/factories/: game_session.py
src/game_session/models/: __init__.py  game_session.py
src/middleware/: __init__.py  blacklist_token_check.py
src/migrations/: env.py
src/migrations/versions/: 0001_add_user_models.py
src/models/: __init__.py
src/models/revoked_tokens/: revoked_token.py
src/models/users/: __init__.py  user.py
src/rating/: exceptions.py
src/rating/api/: rating.py
src/rating/models/: rating.py
src/rating/schemas/: scores.py
src/rating/services/: score_service.py
src/user/admin/: user.py
src/user/api/schemes/: user.py
src/user/api/views/: user.py
src/user/db_services/: __init__.py  user.py
src/user/factories/: user.py
src/user/models/: __init__.py  user.py
src/user/models/users/: user.py
tests/: conftest.py
tests/auth/: test_sign_up.py
tests/friend/: test_friend_crud.py  test_friend_request.py
