[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 79
exclude = [
    ".venv",
    ".git",
    ".vscode",
    "poetry.lock",
    "alembic.ini",
    "docker-compose.yml",
    "Dockerfile",
    ".gitignore",
    "MakeFile",
    "LICENSE",
    "Procfile",
    "*toml",
    "*md",
]

[tool.ruff.lint]
exclude = [
    "*/__init__.py"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"


[tool.poetry.dependencies]
python = "^3.12"
# Framework to make backend apps
# https://pypi.org/project/fastapi/
fastapi = "^0.115.0"

# Validate request body
# https://pypi.org/project/pydantic/
pydantic = "^2.9.2"

# Run fastapi apps
# https://pypi.org/project/pydantic/
uvicorn = "^0.30.6"

# Create asynchronous tasks
# https://pypi.org/project/celery/
celery = "^5.4.0"

# Make db migrations
# https://pypi.org/project/alembic/
alembic = "^1.13.2"

# ORM for postgres
# https://pypi.org/project/SQLAlchemy/
sqlalchemy = "^2.0.35"

# postgresql engine for python
# https://pypi.org/project/psycopg2-binary/
psycopg2-binary = "^2.9.9"

# library for comfortable .env management
# https://pypi.org/project/python-decouple/
python-decouple = "^3.8"

# Async plugin for postgresql
# https://pypi.org/project/asyncpg/
asyncpg = "^0.30.0"

# Engine for interactive with redis for celery
# https://pypi.org/project/redis/5.0.8/
redis = "^5.0.8"

# Shortcut commands
# https://pypi.org/project/invocations/
invocations = "^3.3.0"

# Comfortable invoke commands
# https://github.com/saritasa-nest/saritasa-invocations
saritasa-invocations = "^1.2.3"

# Manage s3 store
# https://pypi.org/project/boto3/
boto3 = "^1.35.29"

# Linter created by rust
# https://pypi.org/project/ruff/
ruff = "^0.6.8"

# Extension for jwt managing
# https://pypi.org/project/python-jose/
python-jose = "^3.3.0"

# Database admin panel for debugging
# https://github.com/aminalaee/sqladmin
sqladmin = "^0.20.1"

# Create and run API tests
# https://github.com/pytest-dev/pytest
pytest = "^8.3.4"

# Generate fake instances for db
# https://github.com/FactoryBoy/factory_boy
factory-boy = "^3.3.1"

# Initialize async client
# https://www.python-httpx.org/
httpx = "^0.28.1"

# Run asynchronous tests
# https://github.com/pytest-dev/pytest-asyncio
pytest-asyncio = "^0.25.3"

# Run pre commit hooks
# https://github.com/pre-commit/pre-commit
pre-commit = "^4.1.0"

# Sending email
# https://github.com/sabuhish/fastapi-mail
fastapi-mail = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
